--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1835451284,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jul-25",
-  "rate": "4.33",
-  "seed": 33412520
+  "rate": "4.33"
 }
