--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 748605307,
-  "date": "2025-Jul-25"
+  "seed": 1093066349,
+  "date": "2025-Jul-25",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
