--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "date": "2025-Jul-25",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 800172189,
-  "rate": "4.33"
+  "seed": 1845406026,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
