--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-25",
   "rate": "4.33",
-  "seed": 617981838
+  "seed": 1625077558,
+  "date": "2025-Jul-25"
 }
