--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 125076144,
-  "date": "2025-Jul-25"
+  "date": "2025-Jul-28",
+  "seed": 41378878,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
