--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 419277768,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
   "date": "2025-Jul-28",
-  "rate": "4.33"
+  "seed": 109785483,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
