--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 834344342,
   "rate": "4.33",
-  "date": "2025-Jul-28",
-  "seed": 109785483,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jul-28"
 }
