--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1472393705,
   "date": "2025-Jul-28",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 831985224
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
