--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-28",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 944626273,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Jul-28",
+  "seed": 44678513
 }
