--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1568838732,
   "rate": "4.33",
   "date": "2025-Jul-28",
-  "seed": 44678513
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
