--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1568838732,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 27487790,
   "rate": "4.33",
-  "date": "2025-Jul-28",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Jul-28"
 }
