--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "date": "2025-Jul-28",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 570917934,
-  "date": "2025-Jul-28"
+  "rate": "4.33",
+  "seed": 318268893
 }
