--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-28",
-  "seed": 700840361,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "date": "2025-Jul-29",
+  "seed": 1498112324
 }
