--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jul-29",
-  "seed": 60031335,
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1038938424,
+  "rate": "4.33"
 }
