--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-29",
-  "seed": 1000303092,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1735890156,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Jul-29"
 }
