--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1799070899,
+  "seed": 508957351,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-29"
+  "date": "2025-Jul-29",
+  "rate": "4.33"
 }
