--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 508957351,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
   "date": "2025-Jul-29",
-  "rate": "4.33"
+  "seed": 1153505694,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
