--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1418280683,
+  "seed": 901536019,
+  "date": "2025-Jul-30",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-29"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
