--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jul-30",
   "rate": "4.33",
-  "seed": 481029329,
-  "date": "2025-Jul-30"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 665271905
 }
