--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jul-30",
-  "rate": "4.33",
-  "seed": 1377578889
+  "seed": 554712510,
+  "rate": "4.33"
 }
