--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-30",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1851012207,
-  "rate": "4.33"
+  "date": "2025-Jul-30",
+  "rate": "4.33",
+  "seed": 1597329133
 }
