--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jul-30",
-  "rate": "4.33",
-  "seed": 364223571
+  "seed": 7905588,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
