--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-30",
-  "seed": 7905588,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-Jul-31",
+  "seed": 1628578178,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
