--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2115143343,
+  "seed": 1747065910,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Jul-31",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Jul-31"
 }
