--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1594780766,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jul-31",
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1391352098,
+  "rate": "4.33"
 }
