--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 488963476,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-Jul-31"
+  "date": "2025-Jul-31",
+  "seed": 1209919768,
+  "rate": "4.33"
 }
