--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jul-31",
+  "seed": 247315823,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1888415052
+  "rate": "4.33"
 }
