--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1507471804,
-  "rate": "4.33",
+  "date": "2025-Aug-1",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-31"
+  "rate": "4.33",
+  "seed": 1231880338
 }
