--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1175508544,
   "date": "2025-Aug-1",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1231880338
+  "rate": "4.33"
 }
