--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Aug-1",
-  "rate": "4.33",
-  "seed": 1969954199
+  "seed": 338947876,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
