--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Aug-1",
-  "seed": 338947876,
+  "seed": 628656402,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "date": "2025-Aug-1"
 }
