--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 628656402,
+  "date": "2025-Aug-1",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-1"
+  "seed": 1679448667,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
