--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-Aug-1",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1859166954
+  "seed": 581444798,
+  "rate": "4.33",
+  "date": "2025-Aug-1"
 }
