--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Aug-1",
-  "seed": 1979687387,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 874779982
 }
