--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Aug-1",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 56895264,
   "rate": "4.33",
-  "seed": 874779982
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Aug-1"
 }
