--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1942887534,
-  "date": "2025-Aug-4",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 172443976,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Aug-4"
 }
