--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 172443976,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-4"
+  "date": "2025-Aug-4",
+  "seed": 1954548221,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
