--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Aug-4",
+  "seed": 1650189149,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 797986428
+  "date": "2025-Aug-4",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
