--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Aug-4",
   "rate": "4.33",
-  "seed": 177270223,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 909390164,
+  "date": "2025-Aug-4"
 }
