--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 1513713941,
+  "date": "2025-Aug-4",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 909390164,
-  "date": "2025-Aug-4"
+  "rate": "4.33"
 }
