--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 510021941,
-  "date": "2025-Aug-4"
+  "date": "2025-Aug-4",
+  "rate": "4.33",
+  "seed": 1147826562
 }
