--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-4",
+  "date": "2025-Aug-5",
   "rate": "4.33",
-  "seed": 1147826562
+  "seed": 932834232,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
