--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
   "date": "2025-Aug-5",
-  "seed": 408296478
+  "seed": 1327362606,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
