--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "date": "2025-Aug-5",
-  "seed": 1327362606,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1332616622,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Aug-5"
 }
