--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 523746738,
   "rate": "4.33",
-  "date": "2025-Aug-5",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1418434935
+  "date": "2025-Aug-5"
 }
