--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1330393119,
+  "seed": 732070550,
   "rate": "4.33",
-  "date": "2025-Aug-5"
+  "date": "2025-Aug-5",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
