--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Aug-5",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 791492270,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 2138094161
 }
