--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 367627739,
-  "date": "2025-Aug-6"
+  "date": "2025-Aug-6",
+  "seed": 974769059
 }
