--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 929068789,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1516000678,
-  "date": "2025-Aug-6",
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-Aug-6"
 }
