--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1941006141,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Aug-6"
+  "date": "2025-Aug-6",
+  "seed": 1960442392,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
