--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-Aug-6",
-  "seed": 961323369
+  "rate": "4.33",
+  "seed": 2116297515,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
