--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Aug-7",
+  "seed": 116717327,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 982436863,
-  "date": "2025-Aug-7"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
