--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
+  "seed": 17079672,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 717505160,
-  "date": "2025-Aug-7",
-  "rate": "4.33"
+  "date": "2025-Aug-7"
 }
