--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 17079672,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-7"
+  "date": "2025-Aug-7",
+  "seed": 1650045889
 }
