--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 98955980,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-7",
-  "seed": 1314409685
+  "rate": "4.33",
+  "date": "2025-Aug-7"
 }
