--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-Aug-7",
+  "seed": 2119279845,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1102803224
+  "date": "2025-Aug-7",
+  "rate": "4.33"
 }
