--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1045730066,
+  "rate": "4.33",
+  "seed": 1166804504,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-8",
-  "rate": "4.33"
+  "date": "2025-Aug-8"
 }
