--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1166804504,
+  "date": "2025-Aug-8",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-8"
+  "seed": 1840744797,
+  "rate": "4.33"
 }
