--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 342889332,
-  "date": "2025-Aug-8"
+  "seed": 1320422534,
+  "date": "2025-Aug-8",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
