--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 2033721952,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Aug-8",
-  "rate": "4.33",
-  "seed": 1817118348
+  "rate": "4.33"
 }
