--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2033721952,
+  "seed": 1699937248,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-8",
-  "rate": "4.33"
+  "date": "2025-Aug-8"
 }
