--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Aug-8",
-  "seed": 128400515,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1857162573,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
