--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "date": "2025-Aug-8",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 968404757
+  "seed": 259240998,
+  "rate": "4.33"
 }
