--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Aug-8",
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 259240998,
-  "rate": "4.33"
+  "seed": 766041435,
+  "date": "2025-Aug-11"
 }
