--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1098306007,
-  "date": "2025-Aug-11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 93886785,
+  "rate": "4.33",
+  "date": "2025-Aug-11"
 }
