--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 93886785,
+  "date": "2025-Aug-11",
+  "seed": 1291953524,
   "rate": "4.33",
-  "date": "2025-Aug-11"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
