--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 2034853246,
-  "date": "2025-Aug-11"
+  "seed": 1661379679,
+  "date": "2025-Aug-11",
+  "rate": "4.33"
 }
