--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1661379679,
+  "rate": "4.33",
   "date": "2025-Aug-11",
-  "rate": "4.33"
+  "seed": 416361047
 }
