--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
+  "seed": 1921149647,
   "date": "2025-Aug-11",
-  "seed": 416361047
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
