--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1384315550,
-  "rate": "4.33",
   "date": "2025-Aug-11",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1593645466,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
