--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "date": "2025-Aug-11",
-  "seed": 1593645466,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 135275082
 }
