--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "date": "2025-Aug-11",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 135275082
+  "seed": 1310963675,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
