--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 629956696,
+  "date": "2025-Aug-12",
   "rate": "4.33",
-  "date": "2025-Aug-11",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 258036295
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
