--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1982454012,
-  "date": "2025-Aug-12"
+  "rate": "4.33",
+  "date": "2025-Aug-12",
+  "seed": 899509889
 }
