--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1356642766,
+  "rate": "4.33",
   "date": "2025-Aug-12",
-  "rate": "4.33"
+  "seed": 835019165
 }
