--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
+  "seed": 325385314,
   "date": "2025-Aug-12",
-  "seed": 835019165
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
