--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 289094753,
   "rate": "4.33",
-  "date": "2025-Aug-12"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Aug-12",
+  "seed": 625675784
 }
