--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1449724746,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Aug-12",
-  "seed": 625675784
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
