--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-13",
+  "seed": 32654172,
   "rate": "4.33",
-  "seed": 791035564
+  "date": "2025-Aug-13"
 }
