--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1716460678,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-13",
   "rate": "4.33",
-  "seed": 308385578
+  "date": "2025-Aug-13"
 }
