--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
+  "seed": 1231142147,
   "date": "2025-Aug-13",
-  "seed": 699510857
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
