--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 877266437,
+  "seed": 1053068900,
+  "date": "2025-Aug-13",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-Aug-13"
+  "rate": "4.33"
 }
