--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 658204401,
+  "rate": "4.33",
   "date": "2025-Aug-13",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 1450358211,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
