--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-Aug-13",
-  "seed": 1450358211,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1900274196,
+  "date": "2025-Aug-14",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
