--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 855646195,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Aug-14"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Aug-20",
+  "seed": 1786731511
 }
