--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Aug-20",
-  "seed": 1786731511
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 343994886,
+  "rate": "4.33"
 }
