--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Aug-20",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 343994886,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1930031151
 }
