--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Aug-20",
+  "seed": 1690319010,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 972348731
+  "date": "2025-Aug-20",
+  "rate": "4.33"
 }
