--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1348050955,
+  "seed": 1344418426,
+  "rate": "4.33",
   "date": "2025-Aug-20",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
