--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 1844235466,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1902591527,
-  "date": "2025-Aug-20"
+  "date": "2025-Aug-20",
+  "rate": "4.33"
 }
