--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 529433792,
+  "rate": "4.33",
   "date": "2025-Aug-21",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 1040985801,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
