--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Aug-21",
-  "seed": 73137515
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 129859181,
+  "date": "2025-Aug-21"
 }
