--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 971897422,
+  "date": "2025-Aug-21",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 129859181,
-  "date": "2025-Aug-21"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
