--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1906165937,
   "date": "2025-Aug-21",
-  "seed": 779777006,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
