--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 845443928,
   "date": "2025-Aug-21",
-  "seed": 1922969628
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
