--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 932802409,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 368722945,
+  "date": "2025-Aug-22",
   "rate": "4.33",
-  "date": "2025-Aug-22"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
