--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
+  "seed": 163758394,
   "date": "2025-Aug-22",
-  "seed": 1327881002
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
