--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1236174561,
+  "seed": 1516419465,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-22"
+  "date": "2025-Aug-22",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
