--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "date": "2025-Aug-22",
-  "seed": 1744746824,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 505389647,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Aug-22"
 }
