--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Aug-22",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 533390788
+  "seed": 255305561,
+  "date": "2025-Aug-25",
+  "rate": "4.33"
 }
