--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Aug-25",
+  "seed": 2143867841,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 888122515,
-  "date": "2025-Aug-25"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
