--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Aug-25",
-  "rate": "4.33",
-  "seed": 218658853
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 89286005,
+  "rate": "4.33"
 }
