--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
+  "seed": 335175829,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1749323141,
-  "date": "2025-Aug-25",
-  "rate": "4.33"
+  "date": "2025-Aug-25"
 }
