--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 335175829,
+  "seed": 1602251981,
+  "date": "2025-Aug-25",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-25"
+  "rate": "4.33"
 }
