--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 91551884,
-  "date": "2025-Aug-25",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-Aug-25",
+  "seed": 717675496
 }
