--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Aug-25",
-  "seed": 717675496
+  "seed": 1144429409,
+  "date": "2025-Aug-25"
 }
