--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Aug-26",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-25",
-  "seed": 265635445
+  "seed": 1997623879,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
