--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Aug-26",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 1997623879,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 965766062
 }
