--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 961813162,
   "date": "2025-Aug-26",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 965766062
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
