--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 1484127194,
   "date": "2025-Aug-26",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 218945163
 }
