--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Aug-26",
-  "seed": 218945163
+  "seed": 231433358,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Aug-26"
 }
