--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 231433358,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-26"
+  "seed": 930338058,
+  "date": "2025-Aug-26",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
