--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Aug-27",
   "rate": "4.33",
-  "date": "2025-Aug-26",
-  "seed": 541461716,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 543934704
 }
