--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 902130562,
   "date": "2025-Aug-27",
   "rate": "4.33",
-  "seed": 543934704
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
