--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 695295588,
   "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Aug-27",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1640135378
 }
