--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 821773325,
   "date": "2025-Aug-27",
-  "seed": 1640135378
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
