--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 821773325,
-  "date": "2025-Aug-27",
+  "rate": "4.33",
+  "seed": 1336797212,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "date": "2025-Aug-27"
 }
