--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 1336797212,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-27"
+  "date": "2025-Aug-27",
+  "seed": 597453262
 }
