--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
+  "seed": 1635068447,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-27",
-  "seed": 597453262
+  "date": "2025-Aug-27"
 }
