--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1635068447,
+  "seed": 565536019,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-27"
+  "date": "2025-Aug-27",
+  "rate": "4.33"
 }
