--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 122251968,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Aug-27",
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1312940510,
+  "rate": "4.33"
 }
