--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Aug-27",
-  "seed": 1433369045,
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-Aug-28",
+  "seed": 1524992193,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
