--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-Aug-28",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1750279900
+  "date": "2025-Aug-28",
+  "seed": 357259929,
+  "rate": "4.33"
 }
