--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Aug-28",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 778863886
+  "seed": 1788446110,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
