--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1334622452,
   "date": "2025-Aug-28",
-  "rate": "4.33",
-  "seed": 1788446110,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
