--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1334622452,
   "date": "2025-Aug-28",
-  "rate": "4.33"
+  "seed": 1543859812
 }
