--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1349026755,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Aug-28",
-  "seed": 1543859812
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
