--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Aug-28",
-  "seed": 2037285917,
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Sep-25",
+  "rate": "4.09",
+  "seed": 1512468078
 }
