--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 853806014,
+  "date": "2025-Sep-25",
   "rate": "4.09",
-  "date": "2025-Sep-25"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1703577162
 }
