--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Sep-25",
   "rate": "4.09",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1703577162
+  "seed": 1191519801,
+  "date": "2025-Sep-25",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
