--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.09",
-  "seed": 1191519801,
-  "date": "2025-Sep-25",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 465017824,
+  "date": "2025-Sep-25"
 }
