--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 27326061,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Sep-25",
-  "rate": "4.09"
+  "rate": "4.09",
+  "seed": 238564836,
+  "date": "2025-Sep-25"
 }
