--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1356121744,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.09",
-  "seed": 238564836,
-  "date": "2025-Sep-25"
+  "date": "2025-Sep-25",
+  "rate": "4.09"
 }
