--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Sep-25",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.09",
-  "seed": 1213663586
+  "seed": 1117821424,
+  "date": "2025-Sep-25",
+  "rate": "4.09"
 }
