--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.09",
+  "date": "2025-Sep-26",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1117821424,
-  "date": "2025-Sep-25",
-  "rate": "4.09"
+  "seed": 416597488
 }
