--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.09",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Sep-26",
-  "seed": 446202244
+  "seed": 941787371,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.09"
 }
