--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Sep-26",
-  "seed": 2054954693,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.09"
+  "rate": "4.09",
+  "seed": 1404233293
 }
