--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 548698176,
+  "rate": "4.09",
   "date": "2025-Sep-26",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 60749950,
-  "rate": "4.09"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
