--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Sep-26",
   "rate": "4.09",
+  "seed": 1469870016,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 832053360
+  "date": "2025-Sep-29"
 }
