--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.09",
-  "seed": 1469870016,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Sep-29"
+  "date": "2025-Sep-29",
+  "rate": "4.09",
+  "seed": 1927411455
 }
