--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Sep-29",
   "rate": "4.09",
-  "seed": 1927411455
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 127492102,
+  "date": "2025-Sep-29"
 }
