--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.09",
+  "seed": 326063497,
+  "date": "2025-Sep-29",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 127492102,
-  "date": "2025-Sep-29"
+  "rate": "4.09"
 }
