--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Sep-29",
-  "rate": "4.09",
-  "seed": 16421019,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1926034643,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.09"
 }
