--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Sep-29",
-  "seed": 1926034643,
+  "rate": "4.09",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.09"
+  "seed": 788047943
 }
