--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Sep-29",
-  "rate": "4.09",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 788047943
+  "seed": 1859688769,
+  "date": "2025-Sep-29",
+  "rate": "4.09"
 }
