--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1852422663,
+  "date": "2025-Sep-29",
   "rate": "4.09",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1085447852,
-  "date": "2025-Sep-29"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
