--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1852422663,
-  "date": "2025-Sep-29",
+  "seed": 1483860780,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.09",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Sep-29"
 }
