--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 646635962,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.09",
   "date": "2025-Sep-30",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 878850330
 }
