--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.09",
+  "seed": 462295812,
   "date": "2025-Sep-30",
-  "seed": 878850330
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.09"
 }
