--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1777465484,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.09",
-  "date": "2025-Sep-30"
+  "date": "2025-Sep-30",
+  "seed": 1220109383
 }
