--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.09",
+  "seed": 521246777,
   "date": "2025-Sep-30",
-  "seed": 1220109383
+  "rate": "4.09",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
