--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 521246777,
-  "date": "2025-Sep-30",
   "rate": "4.09",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1596973639,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Sep-30"
 }
