--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.09",
-  "seed": 1596973639,
+  "date": "2025-Sep-30",
+  "seed": 1466131831,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Sep-30"
+  "rate": "4.09"
 }
