--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.09",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Sep-30",
-  "seed": 178156316
+  "seed": 1994624589,
+  "rate": "4.09",
+  "date": "2025-Sep-30"
 }
