--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1994624589,
   "rate": "4.09",
-  "date": "2025-Sep-30"
+  "date": "2025-Sep-30",
+  "seed": 247399549
 }
