--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1919435374,
   "rate": "4.09",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Sep-30",
-  "seed": 1031756325
+  "date": "2025-Oct-1"
 }
