--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1919435374,
+  "date": "2025-Oct-1",
   "rate": "4.09",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-1"
+  "seed": 924422365
 }
