--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1495097540,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1796004537,
-  "date": "2025-Oct-1",
-  "rate": "4.09"
+  "rate": "4.09",
+  "date": "2025-Oct-1"
 }
