--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1495097540,
+  "seed": 1597890258,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.09",
-  "date": "2025-Oct-1"
+  "date": "2025-Oct-1",
+  "rate": "4.09"
 }
