--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 252493215,
   "rate": "4.09",
   "date": "2025-Oct-1",
-  "seed": 1716344265
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
