--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1124549093,
   "rate": "4.09",
-  "seed": 1536828054,
-  "date": "2025-Oct-1",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Oct-1"
 }
