--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Oct-1",
-  "seed": 739566500,
-  "rate": "4.09",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Oct-2",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 571999921,
+  "rate": "4.09"
 }
