--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.09",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 609872531,
-  "date": "2025-Oct-2"
+  "date": "2025-Oct-2",
+  "rate": "4.09",
+  "seed": 1531151572
 }
