--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Oct-2",
   "rate": "4.09",
-  "seed": 1531151572
+  "seed": 82684946,
+  "date": "2025-Oct-2"
 }
