--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.09",
-  "seed": 82684946,
-  "date": "2025-Oct-2"
+  "date": "2025-Oct-2",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 469409631
 }
