--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.09",
-  "date": "2025-Oct-2",
+  "seed": 1024260861,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 469409631
+  "rate": "4.09",
+  "date": "2025-Oct-2"
 }
