--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1024260861,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 231219736,
+  "date": "2025-Oct-2",
   "rate": "4.09",
-  "date": "2025-Oct-2"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
