--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 971908313,
-  "rate": "4.09",
   "date": "2025-Oct-2",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.09",
+  "seed": 1039077717
 }
