--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1374849913,
   "rate": "4.09",
-  "date": "2025-Oct-2",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 255019285
+  "date": "2025-Oct-3",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
